--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage":"https://navinj2712.github.io/Airbnb_clone",
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^1.0.0",
     "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -16,8 +17,7 @@
     "react-icons": "^4.12.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.3.5",
-    "web-vitals": "^2.1.4",
-    "@babel/plugin-proposal-private-property-in-object": "^1.0.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
